Heading default conversion

--- a/sample/index.html
+++ b/sample/index.html
@@ -15,7 +15,10 @@
 <h1>CKEditor 5 – balloon editor build – development sample</h1>
 
 <div id="editor">
-	<h2>Sample</h2>
+	<h1>Main header</h1>
+	<h2>Sample2</h2>
+	<h3>Sample3</h3>
+	<h4>Sample4</h4>
 
 	<p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#balloon-editor">balloon editor build</a>.</p>
 
